--- a/app/globals.css
+++ b/app/globals.css
@@ -46,14 +46,16 @@ body {
 }
 
 body {
-  padding: 32px;
+  padding: 16px;
   background-color: var(--background-color);
   color: var(--text-color);
   font-size: 15px;
   line-height: 1.6;
   width: 100%;
-  min-height: 100vh;
-  display: block;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 700px) {
