update cursor ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
   --orange: #f54d27;
   --red: #ff7676;
   --border: #ffffff;
+  --cursor: #f54d27;
 
   --text-color: var(--fg);
   --primary: var(--blue);
