--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -4,6 +4,7 @@
   outline: none;
   padding-left: 6px;
   color: var(--text-color);
+  caret-color: var(--cursor);
   min-width: calc(100% - 100px);
   /* font-size: 15px; */
 }
