--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -5,6 +5,18 @@
   padding-left: 6px;
   color: var(--text-color);
   caret-color: var(--cursor);
+  animation: caretBlink 1.1s steps(1, end) infinite;
   min-width: calc(100% - 100px);
   /* font-size: 15px; */
+}
+
+@keyframes caretBlink {
+  0%,
+  49% {
+    caret-color: var(--cursor);
+  }
+  50%,
+  100% {
+    caret-color: transparent;
+  }
 }
