--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -7,7 +7,7 @@
   caret-color: var(--cursor);
   animation: caretBlink 1.1s steps(1, end) infinite;
   min-width: calc(100% - 100px);
-  /* font-size: 15px; */
+  font-size: 14px;
 }
 
 @keyframes caretBlink {
