--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 12px 0.5rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
