--- a/components/Terminal.module.css
+++ b/components/Terminal.module.css
@@ -5,6 +5,7 @@
   overflow-y: scroll;
   font-size: 14px;
   line-height: 1.75;
+  font-family: "Fira Code", monospace;
 }
 
 .terminal::-webkit-scrollbar {
